--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="sql-optimizer" ng-controller="InitCtrl" class="no-js">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8"></meta>
+    <title>SQL Optimizer</title>
+
+    <base href="/"></base>
+
+    <link rel="stylesheet" href="css/node_modules/bootstrap/dist/css/bootstrap.css"></link>
+
+    <script src="js/vendor.js"></script>
+    <script src="js/partials.js"></script>
+    <script src="js/sql-optimizer.js"></script>
 </head>
+
 <body>
 
+<div ui-view="main"></div>
+
 </body>
+
 </html>
