Add schema page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,12 @@
         .ace_editor  {
             height : 200px;
         }
+        .pull-right {
+            float: right !important;
+        }
+        .pull-left {
+            float: left !important;
+        }
     </style>
 </head>
 
